--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   }
 }
 </script>
+<!-- Add Babel Standalone for in-browser transpilation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-slate-900">
     <div class="absolute top-0 left-0 w-full h-full overflow-hidden pointer-events-none">
@@ -41,6 +43,7 @@
         <div class="gradient-blob w-80 h-80 bg-sky-400 bottom-0 left-1/2 -translate-x-1/2 translate-y-1/4"></div>
     </div>
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Change script type to text/babel for Babel to transpile it, and add data-type="module" to support imports -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
