--- a/index.html
+++ b/index.html
@@ -296,6 +296,6 @@
         </footer>
       </div>
     </div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
