--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
       .fade-in {
         animation: fadeIn 0.5s ease-in-out forwards;
       }
+      /* Utility classes for background */
+      .absolute { position: absolute; }
+      .top-0 { top: 0; }
+      .left-0 { left: 0; }
+      .w-full { width: 100%; }
+      .h-full { height: 100%; }
+      .overflow-hidden { overflow: hidden; }
+      .pointer-events-none { pointer-events: none; }
       /* Background blobs */
       .gradient-blob {
         position: fixed;
